--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -5,9 +5,74 @@
              tools:context="com.example.tijingwang.sunnyrainy.FirstFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment"/>
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:background="#1A237E">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/refreshImageView"
+            android:layout_alignParentTop="true"
+            android:src="@drawable/refresh"
+            android:layout_centerHorizontal="true"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Alcatraz Island, CA"
+            android:id="@+id/locationLabel"
+            android:layout_above="@+id/timeLabel"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="60dp"
+            android:textSize="24sp"
+            android:textColor="@android:color/white" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/iconImageView"
+            android:layout_alignBottom="@+id/locationLabel"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:src="@drawable/cloudy_night" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="..."
+            android:id="@+id/timeLabel"
+            android:layout_above="@+id/temperatureLabel"
+            android:layout_centerHorizontal="true"
+            android:textColor="#80FFFFFF"
+            android:textSize="18sp" />
+
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="--"
+            android:id="@+id/temperatureLabel"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true"
+            android:textColor="@android:color/white"
+            android:textSize="100sp" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/degreeImageView"
+            android:layout_alignTop="@+id/temperatureLabel"
+            android:layout_toRightOf="@+id/temperatureLabel"
+            android:layout_toEndOf="@+id/temperatureLabel"
+            android:src="@drawable/degree"
+            android:layout_marginTop="10dp" />
+    </RelativeLayout>
 
 </FrameLayout>
