--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -89,7 +89,6 @@
             android:background="#f9f9fc">
 
 
-
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -125,42 +124,83 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
+                android:background="#d3e8fc"
                 android:paddingTop="@dimen/icon_margin"
                 android:paddingBottom="@dimen/icon_margin"
                 android:paddingLeft="@dimen/icon_margin"
                 android:paddingRight="@dimen/icon_margin"
-                android:background="#d3e8fc"
-                >
+                android:weightSum="3">
 
-                <ImageView
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/play_icon"
-                    android:layout_weight="1"
-                    android:src="@drawable/play_icon" />
+                    android:orientation="vertical"
+                    android:layout_weight="1">
 
-                <ImageView
+                    <RelativeLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center">
+
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:id="@+id/play_icon"
+                            android:src="@drawable/play_icon" />
+
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:id="@+id/pause_icon"
+
+                            android:src="@drawable/pause_icon"
+                            android:layout_alignTop="@+id/play_icon"
+                            android:layout_alignBottom="@+id/play_icon"
+                            android:layout_alignLeft="@+id/play_icon" />
+
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:id="@+id/resume_icon"
+
+                            android:src="@drawable/play_icon"
+                            android:layout_alignTop="@+id/play_icon"
+                            android:layout_alignBottom="@+id/play_icon"
+                            android:layout_alignLeft="@+id/play_icon" />
+
+                    </RelativeLayout>
+                </LinearLayout>
+
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/pause_icon"
-                    android:layout_weight="1"
-                    android:src="@drawable/pause_icon"
-                    android:layout_alignTop="@+id/play_icon"
-                    android:layout_toRightOf="@+id/play_icon"
-                    android:layout_toEndOf="@+id/play_icon" />
+                    android:orientation="horizontal"
+                    android:layout_weight="2"
+                    android:weightSum="2">
 
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/skip_icon"
-                    android:layout_weight="1"
-                    android:layout_alignTop="@+id/pause_icon"
-                    android:layout_toRightOf="@+id/pause_icon"
-                    android:layout_toEndOf="@+id/pause_icon"
-                    android:src="@drawable/skip_icon" />
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/skip_icon"
+                        android:layout_weight="1"
+                        android:layout_alignTop="@+id/play_icon"
+                        android:layout_toRightOf="@+id/play_icon"
+                        android:layout_toEndOf="@+id/play_icon"
+                        android:src="@drawable/skip_icon" />
 
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/like_icon"
+                        android:layout_weight="1"
+                        android:layout_alignTop="@+id/skip_icon"
+                        android:layout_toRightOf="@+id/skip_icon"
+                        android:layout_toEndOf="@+id/skip_icon"
+                        android:src="@drawable/like_icon" />
+
+                </LinearLayout>
             </LinearLayout>
-
         </LinearLayout>
     </RelativeLayout>
 
